--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!--<title>React App</title>-->
     </head>
     <body>
+        <h1>Hello World</h1>
         <script src="./js/index.js"></script>
     </body>
 </html>
