--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--<title>React App</title>-->
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello World, This works</h1>
         <script src="./js/index.js"></script>
     </body>
 </html>
