--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -13,7 +14,7 @@
         <!--<title>React App</title>-->
     </head>
     <body>
-        <h1>Hello World, This works</h1>
+        <h1>This is template</h1>
         <script src="./js/index.js"></script>
     </body>
 </html>
