--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <!--name="description"-->
         <!--content=""-->
         <!--/>-->
-        <link rel="stylesheet" src="/styles/style.css" />
-        <link rel="stylesheet" src="./styles/index.css" />
+        <link rel="stylesheet" href="/styles/style.css" />
+        <link rel="stylesheet" href="./styles/index.css" />
         <!--<title>React App</title>-->
     </head>
     <body>
