--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!--name="description"-->
         <!--content=""-->
         <!--/>-->
-        <link rel="stylesheet" href="/styles/style.css" />
+        <link rel="stylesheet" href="/styles/styles.css" />
         <link rel="stylesheet" href="./styles/index.css" />
         <!--<title>React App</title>-->
     </head>
