--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--/>-->
         <link rel="stylesheet" href="/styles/styles.css" />
         <link rel="stylesheet" href="./styles/index.css" />
-        <!--<title>React App</title>-->
+        <title>Template</title>
     </head>
     <body>
         <h1>This is template</h1>
